# nestor

./: .gitignore  .gitlab-ci.yml  404.html  CODEMETA.yaml  CV_study.ipynb  DictTags.ipynb  DictTags_HVAC.ipynb  Dockerfile  Greystone Maintainance Topics - LDA.html  LICENSE.md  LICENSE.rst  MANIFEST.in  Maintainance Topics - LDA.html  Nestor.spec  README.md  README.rst  TextacyTags.ipynb  app.py  bio_output_creation.py  config.yaml  environment.yaml  environment.yml  gldeployenv.yaml  index.html  mkdocs.yml  ner_example_spacy.py  nist-pages-deploy.sh  old_setup.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  sitemap.xml  sklearnTags.ipynb  textacy_DiagKB.ipynb  tutorial.ipynb  version.py
.github/workflows/: nist-pages.yml
DatabaseStorage/Program/: Main.ipynb  __init__.py
LICENSE/: index.html
OLD/: Greystone Maintainance Topics - LSA.html  Greystone Maintainance Topics.html  sklearnTags.ipynb
app/: __init__.py  helper_objects.py  n-grame_ui.ui  n_grame_ui_app.py  n_grame_ui_skeleton.py  qt_tester.ipynb  test_app.py  test_skeleton.py  test_skeleton.ui  testcsvapp.py
app/kpi_window/: KPI_window_app.py  KPI_window_skeleton.py  save_file.json
app/taggingUI/: TEST.py  TEST.ui  __init__.py  config.yaml  helper_objects.py  main.py  openFilesUI.ui  openFilesUI_app.py  openFilesUI_skeleton.py  selectCSVHeadersUI.ui  selectCSVHeadersUI_app.py  selectCSVHeadersUI_skeleton.py  taggingUI.ui  taggingUI_app.py  taggingUI_skeleton.py  termsOfUse_skeleton.py
dashboard/: .nfs000000000bc4403500000ae3  .~lock.Abstract Template.docx#  .~lock.KEA Meeting.odp#  Abstract Template.docx  KEA Meeting.odp  Untitled.ipynb  run.py
dashboard/Reacurring Neural Nets/: Generating Data-Copy1.ipynb  Generating Data.ipynb  RNN Lit Review.ipynb  RNNDiagrams.ipynb  Untitled.ipynb  dataManipulating.ipynb  introTutorial.ipynb
dashboard/Visuals/: Untitled.ipynb  visuals.ipynb
dashboard/dashApp/: Untitled.ipynb  app.py
dashboard/flaskDash/: Untitled.ipynb  __init__.py  app.py  models.py  plots.py  views.py
database_storage/: HistoricalCSV_GraphDatabase.ipynb  KPI.ipynb  Main.ipynb  Test.ipynb  helper.py  main.py
database_storage/.ipynb_checkpoints/: Test-checkpoint.ipynb
database_storage/database/: DatabaseSchema.yaml  database.py
database_storage/kpi/: match.py  request.py  where.py
database_storage/objects/: human.py  issue.py  kpi.py  machine.py  maintenanceworkorder.py  plot.py  tag.py
docs/: Makefile  README.md  biblio.bib  conf.py  dask.ipynb  dask_kex.ipynb  dask_vocab.ipynb  examples.rst  fileio.ipynb  getting-started.md  getting_started.rst  gs_tax.gt  gui-links.md  index.rst  make.bat  motivation.md  nx2gt.py  pairs.ipynb  presentation.ipynb  readme.rst  step_by_step.rst  tutorial.ipynb  workflow.md
docs/case_studies/: arm_case_study.ipynb  auto_case_study.ipynb  d3tree.json  f2.template  geojson.html  gs_case_study.css  gs_case_study.ipynb  hvac_case_study.ipynb  mine_case_study.ipynb  nist_hvac_map.html  psu_case_study.ipynb  sap_case_study.ipynb
docs/deprecated/: plot_sandbox.ipynb  tutorial.ipynb
docs/examples/: bio_output_creation.ipynb  bio_output_creation.py  index.md  nb-env.yml  ner_example_nltk.md  ner_example_nltk.py  ner_example_spacy.md  ner_example_spacy.py
docs/how_to_guide/: advanced.md  anaconda_tut.rst  dash_demonstration.rst  install.md  installation.md  installation.rst  loading_data.md  tutorial.md  tutorial.rst  using_nestor.md
docs/ieeebd17/: d3tree.json  gs_graph.gt  presentation.ipynb
docs/images/: biblio.bib
docs/industryforum/: output_toggle.tpl  presentation.ipynb
docs/nestor/: datasets.md  index.md  keyword.md  settings.md  tagplots.md  tagtrees.md
docs/notebooks/: Data Storage.ipynb  d3tree.json  f2.template  gs_case_study.ipynb  hierarchical_relationships.ipynb  hvac_case_study.ipynb  mine_case_study.ipynb  sap_case_study.ipynb  survival-analysis.ipynb
docs/source/: app.rst  app.taggingUI.rst  database_storage.database.rst  database_storage.objects.rst  database_storage.rst  mlp.rst  modules.rst  nestor.database_storage.database.rst  nestor.database_storage.objects.rst  nestor.database_storage.rst  nestor.datasets.base.rst  nestor.datasets.rst  nestor.keyword.rst  nestor.rst  nestor.settings.rst  nestor.tagplots.rst  nestor.tagtrees.rst  nestor.ui.kpi_window.rst  nestor.ui.rst
examples/ner_example_nltk/: index.html
examples/ner_example_spacy/: index.html
getting-started/: index.html
gui-links/: index.html
mlp/: __init__.py  embed.py  embeddings.py  kex.py  keyword.py  plot.py  predict.py  preprocess.py  test.py  tools.py  tree.py
motivation/: index.html
nestor/: __init__.py  keyword.py  settings.py  settings.yaml  tagplots.py  tagtrees.py  utils.py
nestor/_database_storage/: main.py
nestor/_ui/: mainwindow.py  openFilesUI_app.py  selectCSVHeadersUI_app.py  taggingUI_app.py
nestor/dash/: __init__.py  models.py  plotserve.py  views.py
nestor/database_storage/: main.py
nestor/datasets/: __init__.py  base.py  excavators-cleaned.csv  excavators.csv  excavators.py  index.html  utils.py  vocab.py
nestor/keyword/: index.html
nestor/settings/: index.html
nestor/store_data/: HistoricalCSV_GraphDatabase.ipynb  csvHeader.yaml  database.py  integration.py  settings.yaml  types_data.yaml  types_entities.yaml
nestor/ui/: Nestor.py  __init__.py  app.py  csvHeader.yaml  dialogDatabaseConnection.ui  dialogDatabaseConnection_app.py  dialogDatabaseRunQuery.ui  dialogWait.ui  dialog_wait.ui  dialogmenu_csvheadermapping.ui  dialogmenu_databaseconnect.ui  dialogmenu_databaserunqueries.ui  dialogmenu_loadproject.ui  dialogmenu_newproject.ui  dialogmenu_openproject.ui  dialogmenu_researchwindow.ui  dialogmenu_settings.ui  dialogmenu_setup.ui  dialogmenu_specialreplace.ui  helper_objects.py  (+11 more)
notebooks/: ner_example_spacy.py
requirements/: defaults.txt  docs.txt
sandbox/: DictTags.ipynb  DictTags.slides.html  DictTags_HVAC.ipynb  d3tree.json  tax.dot  tax_hvac.dot
scripts/: nestor-dash  nestor-gui
search/: search_index.json
tests/: test_datasets.py  test_keyword.py  test_settings.py
workflow/: index.html
(+114 files in other folders)
