[tool.poetry]
name = "nestor"
version = "0.4.0"
description = "Quantifying tacit human knowledge for Smart Manufacturing Maintenance, for maintnenance-based investigatory analysis"
authors = ["tbsexton <thurston.sexton@nist.gov>"]
include = ["*.md", "*.rst", "*.ui",
           "nestor/datasets/*.csv",
           "nestor/settings.yaml"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "License :: Public Domain"
]
keywords = [ "nlp", "smart", "manufacturing", "maintenance", "tag" ]
homepage = "https://www.nist.gov/services-resources/software/nestor"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
networkx = "^2.4"
pyyaml = "^5.3.1"
tqdm = "^4.48.2"
tables = "^3.6.1"
fuzzywuzzy = "^0.18.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.8.3"
pytest = "^6.0.1"
pytest-check = "^0.3.9"
portray = "^1.4.0"
# pdocs = { git = "https://github.com/kylebarron/pdocs.git", branch = "parse-docstring"}
mkdocs-bibtex = "^0.3.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]

[tool.portray.mkdocs]
repo_url = "https://github.com/usnistgov/nestor"

[tool.portray.mkdocs.theme]
favicon = "media/favicon.png"
logo = "media/icon.png"
name = "material"
palette = {primary = "deep orange", accent = "teal"}

# [[tool.portray.mkdocs.plugins]]
#     [[tool.portray.mkdocs.plugins.bibtex]]
#     bib_file = "docs/biblio.bib"
#     [[tool.portray.mkdocs.plugins.bibtex]]
#     cite_style = "pandoc"
#     [[tool.portray.mkdocs.plugins.search]]

# [tool.portray.mkdocs.plugins]
# bibtex = { bib_file = "docs/biblio.bib", cite_style = "pandoc" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
