[tool.poetry]
name = "nist-nestor"
version = "0.0.0"
description = "Quantifying tacit human knowledge for Smart Manufacturing Maintenance, for maintnenance-based investigatory analysis"
authors = ["tbsexton <thurston.sexton@nist.gov>"]
include = ["./*.md", "nestor/datasets/*.csv", "nestor/settings.yaml"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "License :: Public Domain"
]
keywords = [ "nlp", "smart", "manufacturing", "maintenance", "tag" ]
homepage = "https://www.nist.gov/services-resources/software/nestor"

packages = [
    {include = "nestor"}
]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.23.2"
networkx = "^2.4"
pyyaml = "^5.3.1"
tqdm = "^4.48.2"
tables = "^3.6.1"
fuzzywuzzy = "^0.18.0"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.10.0"
pytest = "^6.0.1"
pytest-check = "^0.3.9"
black = "^19.10b0"
taskipy = "^1.2.1"
# portray = "^1.4.0"
mkdocs = "^1.1.2"
# pdocs = "^1.0.2"
# pdocs = { git = "https://github.com/kylebarron/pdocs.git", branch = "parse-docstring"}
mkdocs-bibtex = "^0.3.0"
mkdocs-pdf-export-plugin = "^0.5.8"
mkdocs-material = "^5.5.14"
mkdocs-mermaid2-plugin = "^0.4.2"
mkdocstrings = "^0.13.4"

[tool.taskipy.tasks]
format = "black nestor/ && black tests/"
deploy-docs = "mkdocs build --verbose"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]

# [tool.portray]
# modules = ["nestor"]

# [tool.portray.mkdocs]
# repo_url = "https://github.com/usnistgov/nestor"
# plugins = [
#     "markdownmermaid",
#     "pdf-export",
#     "search",
# ]
# extra_javascript = [
#     "https://unpkg.com/mermaid@7.1.2/dist/mermaid.min.js"
# ]
# [tool.portray.mkdocs.nav]
# "Home" = "README.md"
# "Getting Started" = "docs/getting-started.md"
# "User Interfaces" = "docs/gui-links.md"
# "Development Repository" = "https://github.com/usnistgov/nestor"


# [tool.portray.mkdocs.theme]
# favicon = "media/favicon.png"
# logo = "media/icon.png"
# name = "material"
# palette = {primary = "deep orange", accent = "teal"}

# [[tool.portray.mkdocs.plugins]]
#     [[tool.portray.mkdocs.plugins.bibtex]]
#     bib_file = "docs/biblio.bib"
#     [[tool.portray.mkdocs.plugins.bibtex]]
#     cite_style = "pandoc"
#     [[tool.portray.mkdocs.plugins.search]]

# [tool.portray.mkdocs.plugins]
# bibtex = { bib_file = "docs/biblio.bib", cite_style = "pandoc" }

[build-system]
requires = ["poetry_core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
# requires = ["poetry>=0.12", "poetry-dynamic-versioning"]
# build-backend = "poetry.masonry.api"
